...
  const _PageSpec(this.title, this.color, this.to);
}

// Defines expected Pages and their fallback default colors
final Map<String, _PageSpec> _kDashboardPages = {
  'join-live': _PageSpec(
    'Join Live',
    Colors.indigo.shade600,
    (c) => const JoinLive(),
  ),
  'weekly-bulletin': _PageSpec(
    'Weekly Bulletin',
    Colors.teal.shade600,
    (c) => const BulletinsPage(),
  ),
  'sermons': _PageSpec(
    'Sermons',
    Colors.deepPurple.shade600,
    (c) => const SermonsPage(),
  ),
  'events': _PageSpec(
    'Events',
    Colors.orange.shade600,
...
